--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -7,9 +7,21 @@
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/tables']">
             <mat-icon class="sidenav-icon">table_chart</mat-icon> {{ 'Logs' | translate }}
         </a>
-        <!--
 
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
+
+        <!--
+            <mat-icon class="nav-icon">person</mat-icon>
+            <span class="nav-spacer"></span>
+            <mat-icon class="nav-icon">notifications</mat-icon>
+            <mat-icon class="nav-icon">apps</mat-icon>
+            <mat-icon class="nav-icon">fullscreen</mat-icon>
+            <mat-icon class="nav-icon">flag</mat-icon>
+            <mat-icon class="nav-icon">search</mat-icon>
+            <mat-icon class="nav-icon">account_circle</mat-icon> -->
+        
+       
+
+        <!--<a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
             <mat-icon class="sidenav-icon">bar_chart</mat-icon> {{ 'Charts' | translate }}
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/forms']">
@@ -39,7 +51,7 @@
                     <a href="javascript:void(0)"><span>{{ 'Submenu' | translate }}</span></a>
                 </li>
             </ul>
-        </div>
-    -->
+        </div>-->
+  
     </mat-nav-list>
 </div>
