--- a/src/app/layout/tables/tables.component.html
+++ b/src/app/layout/tables/tables.component.html
@@ -33,7 +33,7 @@
         <!-- Color Column -->
         <ng-container matColumnDef="color">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-            <td mat-cell *matCellDef="let row" > {{row.symbol}} </td>
+            <td mat-cell *matCellDef="let row" > <button mat-raised-button (click)="openDialog()">{{row.symbol}} </button></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
