--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
         
        
 
-        <!--<a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
             <mat-icon class="sidenav-icon">bar_chart</mat-icon> {{ 'Charts' | translate }}
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/forms']">
@@ -51,7 +51,7 @@
                     <a href="javascript:void(0)"><span>{{ 'Submenu' | translate }}</span></a>
                 </li>
             </ul>
-        </div>-->
+        </div>
   
     </mat-nav-list>
 </div>
