transport traversal added

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         </a>
         
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/tables']">
-            <mat-icon class="sidenav-icon">table_chart</mat-icon> {{ 'Logs' | translate }}
+            <mat-icon class="sidenav-icon">table_chart</mat-icon> {{ 'Transports' | translate }}
         </a>
 
 
@@ -20,7 +20,7 @@
             <mat-icon class="nav-icon">account_circle</mat-icon> -->
         
        
-
+<!--
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
             <mat-icon class="sidenav-icon">bar_chart</mat-icon> {{ 'Charts' | translate }}
         </a>
@@ -52,6 +52,6 @@
                 </li>
             </ul>
         </div>
-  
+    -->
     </mat-nav-list>
 </div>
