--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
             <mat-card-content>
                 <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
                     [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></canvas>
+                    (chartClick)="chartClicked($event)" [colors]="barchartColors"></canvas>
             </mat-card-content>
         </mat-card>
     </div>
@@ -32,7 +32,7 @@
     <div fxFlex>
         <mat-card>
             <mat-card-header>
-                <mat-card-title>Latest Files</mat-card-title>
+                <mat-card-title>Latest Transports</mat-card-title>
             </mat-card-header>
             <mat-card-content>
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile">
@@ -54,16 +54,16 @@
                     </ng-container>
                     <ng-container matColumnDef="status">
                         <th mat-header-cell *matHeaderCellDef>Status</th>
-                        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                        <td mat-cell *matCellDef="let element" [ngStyle]="{'color':element.color}" > {{element.status}} </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
-                        <th mat-header-cell *matHeaderCellDef> Action </th>
+                        <th mat-header-cell *matHeaderCellDef> Details </th>
                         <td mat-cell *matCellDef="let element"> 
-                            <button mat-raised-button (click)="openDialog()">Loc 1</button><b>--></b>
-                            <button mat-raised-button (click)="openDialog()">Loc 2</button><b>--></b>
-                            <button mat-raised-button (click)="openDialog()">Loc 3</button><b>--></b>
-                            <button mat-raised-button (click)="openDialog()">Loc 4</button><b>--></b>
-                            <button mat-raised-button (click)="openDialog()">Loc 5</button>
+                            <button mat-raised-button class="bggreen" >loc 1</button><b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}" >Loc 2</button><b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}" >Loc 3</button><b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button><b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}" >Loc 5</button>
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
