--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -5,6 +5,8 @@ table {
 text-align: center;
 
 }
+.bggreen{background-color: green;color:white}
+.bgred{background-color: red;color:white}
 .mat-card {
     text-align: center;
     img {
