--- a/src/app/layout/tables/tables.component.html
+++ b/src/app/layout/tables/tables.component.html
@@ -2,7 +2,7 @@
  <div fxFlex>
         <mat-card>
             <mat-card-header>
-                <mat-card-title>Logs</mat-card-title>
+                <mat-card-title>Transports</mat-card-title>
             </mat-card-header>
             <mat-card-content>
 <mat-form-field>
@@ -10,32 +10,37 @@
 </mat-form-field>
 
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
-
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Process </th>
-            <td mat-cell *matCellDef="let row"> {{row.position}} </td>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile" matsort>
+        <ng-container matColumnDef="process">
+            <th mat-header-cell *matHeaderCellDef> Process </th>
+            <td mat-cell *matCellDef="let element"> {{element.process}} </td>
         </ng-container>
-
-        <!-- Progress Column -->
-        <ng-container matColumnDef="progress">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        <ng-container matColumnDef="data">
+            <th mat-header-cell *matHeaderCellDef> Data </th>
+            <td mat-cell *matCellDef="let element"> {{element.data}} </td>
         </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let row"> {{row.weight}} </td>
+        <ng-container matColumnDef="startDate">
+            <th mat-header-cell *matHeaderCellDef> Start Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
         </ng-container>
-
-        <!-- Color Column -->
-        <ng-container matColumnDef="color">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-            <td mat-cell *matCellDef="let row" > <button mat-raised-button (click)="openDialog()">{{row.symbol}} </button></td>
+        <ng-container matColumnDef="lastUpdatedDate">
+            <th mat-header-cell *matHeaderCellDef>Last Updated</th>
+            <td mat-cell *matCellDef="let element"> {{element.lastUpdatedDate}} </td>
         </ng-container>
-
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{'color':element.color}" > {{element.status}} </td>
+        </ng-container>
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Details </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-raised-button class="bggreen" >loc 1</button><b>==></b>
+                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}" >Loc 2</button><b>==></b>
+                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}" >Loc 3</button><b>==></b>
+                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button><b>==></b>
+                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}" >Loc 5</button>
+            </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
