--- a/src/app/layout/components/topnav/topnav.component.html
+++ b/src/app/layout/components/topnav/topnav.component.html
@@ -1,9 +1,10 @@
-<mat-toolbar color="primary" class="fix-nav">
+<mat-toolbar color="" class="fix-nav">
     <button type="button" mat-icon-button class="visible-md" (click)="toggleSidebar()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
     <div class="nav-brand">
-        Admin
+        <img src="../../../../assets/images/logo.png" height="40px" />
+        
     </div>
     <form class="hidden-sm" style="margin-left: 20px; margin-top: 5px">
         
