--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,6 +3,9 @@
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/dashboard']">
             <mat-icon class="sidenav-icon">dashboard</mat-icon> {{ 'Dashboard' | translate }}
         </a>
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/users']">
+            <mat-icon class="sidenav-icon">supervisor_account</mat-icon> {{ 'Users' | translate }}
+        </a>
         
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/tables']">
             <mat-icon class="sidenav-icon">table_chart</mat-icon> {{ 'Transports' | translate }}
@@ -20,12 +23,12 @@
             <mat-icon class="nav-icon">account_circle</mat-icon> -->
         
        
-<!--
+
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/charts']">
             <mat-icon class="sidenav-icon">bar_chart</mat-icon> {{ 'Charts' | translate }}
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/forms']">
-            <mat-icon class="sidenav-icon">input</mat-icon> {{ 'Forms' | translate }}
+            <mat-icon class="sidenav-icon">account_box</mat-icon> {{ 'Forms' | translate }}
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/grid']">
             <mat-icon class="sidenav-icon">grid_on</mat-icon> {{ 'Material Grid' | translate }}
@@ -52,6 +55,6 @@
                 </li>
             </ul>
         </div>
-    -->
+
     </mat-nav-list>
 </div>
