--- a/src/app/shared/modules/stat/stat.component.scss
+++ b/src/app/shared/modules/stat/stat.component.scss
@@ -31,17 +31,17 @@
 }
 
 .mat-card.danger {
-    background: linear-gradient(60deg, #ec407a, #d81b60);
+    background:linear-gradient(60deg, #BF212F, #BF212F);
 }
 
 .mat-card.warn {
-    background: linear-gradient(60deg, #ffa726, #fb8c00);
+    background: linear-gradient(60deg, #0030A2, #0030A2);
 }
 
 .mat-card.success {
-    background: linear-gradient(60deg, #66bb6a, #43a047);
+    background: linear-gradient(60deg, #01692C, #01692C);
 }
 
 .mat-card.info {
-    background: linear-gradient(60deg, #26c6da, #00acc1);
+    background: linear-gradient(60deg, #00AAE1, #00AAE1);
 }
