--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,14 @@
+<div  class="logo" >
+    <img src="../../assets/images/logo.png" />
+</div>
+
 <div class="login-page">
+        
     <div class="content">
+   
+        
         <!-- <h1 class="app-name">Sb Admin Material</h1> -->
-        <form class="login-form" fxFlex  >
+        <form *ngIf="login" class="login-form" fxFlex  >
             <div class="text-center">
                 <h2 class="app-name">Admin Login</h2>
             </div>
@@ -24,8 +31,8 @@
                     <mat-checkbox color="primary">Remember Me</mat-checkbox>
                 </div>
                 <div fxFlex  fxLayoutAlign="end">
-                    <a href="javascript:void(0)">Forget Password</a>
-                </div>
+                        <a (click)="onForgotPassword()">Forget Password</a>
+                    </div>
             </div>
             <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
@@ -35,4 +42,37 @@
 
         </form>
     </div>
+
+<!--- Forgot Password ----------------------------->
+ <div class="content">
+   
+        
+        <!-- <h1 class="app-name">Sb Admin Material</h1> -->
+        <form *ngIf="forgotPassword" class="login-form" fxFlex  >
+                <div class="text-center">
+                    <h2 class="app-name">Forgot Password</h2>
+                </div>
+                <div fxFlex  fxlayout="row" fxlayout.lt-md="column">
+                    <div fxFlexFill>
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="Email">
+                        </mat-form-field>
+                    </div>
+                </div>
+               
+                <div fxFlex  fxLayout="row" fxLayout.lt-md="column" style="margin: 20px 0 30px 0">
+                   
+                    <div fxFlex  fxLayoutAlign="end">
+                            <a (click)="onSignIn()">Sign In</a>
+                    </div>
+                </div>
+                <div fxFlex  fxLayout="row" fxLayout.lt-md="column">
+                    <div fxFlexFill>
+                        <button mat-raised-button color="primary" class="w-100" (click)="onLogin()">Submit</button>
+                    </div>
+                </div>
+    
+            </form>
+        </div>
+
 </div>
