--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -13,11 +13,11 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile" matsort>
         <ng-container matColumnDef="firstName">
             <th mat-header-cell *matHeaderCellDef> First Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
         </ng-container>
         <ng-container matColumnDef="lastName">
             <th mat-header-cell *matHeaderCellDef> Last Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
         </ng-container>
         <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef> Email </th>
