--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,8 @@
+<div fxFlex  fxlayout="row" class="logo">
+        <img src="../../assets/images/logo.png" />
+    </div>
 <div class="login-page">
+       
     <div class="content">
         <!-- <h1 class="app-name">Sb Admin Material</h1> -->
         <form class="login-form" fxFlex  >
