--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -1,48 +1,56 @@
+<div fxFlex>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Users</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <mat-form-field>
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
 
- <div fxFlex>
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>Users</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile" matsort>
+                    <ng-container matColumnDef="firstName">
+                        <th mat-header-cell *matHeaderCellDef> First Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="lastName">
+                        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="email">
+                        <th mat-header-cell *matHeaderCellDef> Email </th>
+                        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
 
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile" matsort>
-        <ng-container matColumnDef="firstName">
-            <th mat-header-cell *matHeaderCellDef> First Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
-        </ng-container>
-        <ng-container matColumnDef="lastName">
-            <th mat-header-cell *matHeaderCellDef> Last Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
-        </ng-container>
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-       
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element" [ngStyle]="{'color':element.color}" > {{element.status}} </td>
-        </ng-container>
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef> Details </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-raised-button class="bggreen" >loc 1</button><b>==></b>
-                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}" >Loc 2</button><b>==></b>
-                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}" >Loc 3</button><b>==></b>
-                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button><b>==></b>
-                <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}" >Loc 5</button>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+                    </ng-container>
 
-    <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-</div>
-</mat-card-content>
-</mat-card>
+                    <ng-container matColumnDef="status">
+                        <th mat-header-cell *matHeaderCellDef>Status</th>
+                        <span>
+                            <td mat-cell *matCellDef="let element" [ngStyle]="{'color':element.color}"> {{element.status}} </td>
+                        </span>
+                    </ng-container>
+
+
+                    <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef> Details </th>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-raised-button class="bggreen">loc 1</button>
+                            <b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}">Loc 2</button>
+                            <b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}">Loc 3</button>
+                            <b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button>
+                            <b>==></b>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 5</button>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+
+                <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            </div>
+        </mat-card-content>
+    </mat-card>
