--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -19,9 +19,8 @@
                 <mat-card-title>Bar Chart</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
-                    [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)" [colors]="barchartColors"></canvas>
+                <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
+                    [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)" [colors]="barchartColors"></canvas>
             </mat-card-content>
         </mat-card>
     </div>
@@ -46,28 +45,35 @@
                     </ng-container>
                     <ng-container matColumnDef="startDate">
                         <th mat-header-cell *matHeaderCellDef> Start Date </th>
-                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.processTimeStamp | date}}</td>
+                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.processTimeStamp | date:'short'}}</td>
                     </ng-container>
                     <ng-container matColumnDef="lastUpdatedDate">
                         <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-                        <td mat-cell *matCellDef="let element">{{element.fileRegistry.updatedAt | date}} </td>
+                        <td mat-cell *matCellDef="let element">{{element.fileRegistry.updatedAt | date:'short'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="status">
                         <th mat-header-cell *matHeaderCellDef>Status</th>
                         <td mat-cell *matCellDef="let element">
-                                <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
-                                <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">failed</span>
-                                <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">competed</span>
-                            </td>
+                            <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
+                            <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">failed</span>
+                            <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">competed</span>
+                        </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
                         <th mat-header-cell *matHeaderCellDef> Details </th>
-                        <td mat-cell *matCellDef="let element"> 
-                            <button mat-raised-button class="bggreen" >loc 1</button><b>==></b>
+                        <td mat-cell *matCellDef="let element">
+                            <span *ngFor="let  location of element.route; let idx = index">
+                                <button mat-raised-button class="bggreen">{{location.locationName}}</button>
+                                <span *ngIf="element.route.length > idx+1">
+                                    <b>==></b>
+                                </span>
+                            </span>
+                            <!-- <button mat-raised-button class="bggreen" >loc 1</button><b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}" >Loc 2</button><b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed' ?'green':'grey','color':'white'}" >Loc 3</button><b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button><b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}" >Loc 5</button>
+                         -->
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
