--- a/src/app/layout/tables/tables.component.html
+++ b/src/app/layout/tables/tables.component.html
@@ -9,36 +9,44 @@
             </mat-form-field>
 
             <div class="mat-elevation-z8">
-                
+
                 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [class.isMobile]="isMobile" matsort>
                     <ng-container matColumnDef="process">
                         <th mat-header-cell *matHeaderCellDef> Process </th>
                         <td mat-cell *matCellDef="let element">{{element.fileRegistry.processName}} </td>
-                    </ng-container>                   
+                    </ng-container>
                     <ng-container matColumnDef="data">
                         <th mat-header-cell *matHeaderCellDef>Data </th>
                         <td mat-cell *matCellDef="let element"> {{element.fileRegistry.sourceDataName}} </td>
                     </ng-container>
                     <ng-container matColumnDef="startDate">
                         <th mat-header-cell *matHeaderCellDef> Start Date </th>
-                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.processTimeStamp | date}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.processTimeStamp | date:'short'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="lastUpdatedDate">
                         <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.updatedAt | date}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.fileRegistry.updatedAt | date:'short'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="status">
                         <th mat-header-cell *matHeaderCellDef>Status</th>
                         <td mat-cell *matCellDef="let element">
-                                <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
-                                <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">failed</span>
-                                <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">competed</span>
-                            </td>
+                            <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
+                            <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">failed</span>
+                            <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">competed</span>
+                        </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
                         <th mat-header-cell *matHeaderCellDef> Details </th>
                         <td mat-cell *matCellDef="let element">
-                            <button mat-raised-button class="bggreen">loc 1</button>
+                            <span *ngFor="let  location of element.route; let idx = index">
+                                <button mat-raised-button class="bggreen">{{location.locationName}}</button>
+                                <span *ngIf="element.route.length > idx+1">
+                                    <b>==></b>
+                                </span>
+
+                            </span>
+
+                            <!-- <button mat-raised-button class="bggreen">loc 1</button>
                             <b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Failed'?'red':'green','color':'white'}">Loc 2</button>
                             <b>==></b>
@@ -46,7 +54,7 @@
                             <b>==></b>
                             <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 4</button>
                             <b>==></b>
-                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 5</button>
+                            <button mat-raised-button [ngStyle]="{'background-color':element.status==='Completed'?'green':'grey','color':'white'}">Loc 5</button> -->
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
