--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -56,8 +56,8 @@
                         <th mat-header-cell *matHeaderCellDef>Status</th>
                         <td mat-cell *matCellDef="let element">
                             <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
-                            <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">failed</span>
-                            <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">competed</span>
+                            <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">Failed</span>
+                            <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">Completed</span>
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
