--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -3,13 +3,13 @@
         <app-stat [bgClass]="'info'" [icon]="'dashboard'" [count]=usercount [label]="'Users'"></app-stat>
     </div>
     <div fxFlex>
-        <app-stat [bgClass]="'warn'" [icon]="'view_list'" [count]="124" [label]="'Files'"></app-stat>
+        <app-stat [bgClass]="'warn'" [icon]="'view_list'" [count]=filecount [label]="'Files'"></app-stat>
     </div>
     <div fxFlex>
-        <app-stat [bgClass]="'success'" [icon]="'shopping_cart'" [count]="12" [label]="'Success Transport !'"></app-stat>
+        <app-stat [bgClass]="'success'" [icon]="'shopping_cart'" [count]=successTransport [label]="'Success Transport !'"></app-stat>
     </div>
     <div fxFlex>
-        <app-stat [bgClass]="'danger'" [icon]="'contact_support'" [count]="13" [label]="'Failed Transport!'"></app-stat>
+        <app-stat [bgClass]="'danger'" [icon]="'contact_support'" [count]=failedTransport [label]="'Failed Transport!'"></app-stat>
     </div>
 </div>
 
