--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -50,21 +50,23 @@
                     </ng-container>
                     <ng-container matColumnDef="lastUpdatedDate">
                         <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-                        <td mat-cell *matCellDef="let element">{{element.fileRegistry.updatedAt | date:'short'}} </td>
+                        <td mat-cell *matCellDef="let element">{{element.fileRegistry.updatedAt |date: 'yyyy-MM-dd'}} </td>
                     </ng-container>
                     <ng-container matColumnDef="status">
                         <th mat-header-cell *matHeaderCellDef>Status</th>
                         <td mat-cell *matCellDef="let element">
-                            <span [ngStyle]="{'color':'green'}" *ngIf="element.fileRegistry.status == 1">In-Progress</span>
-                            <span [ngStyle]="{'color':'red'}" *ngIf="element.fileRegistry.status == 0">Failed</span>
-                            <span [ngStyle]="{'color':'orange'}" *ngIf="element.fileRegistry.status == 2">Completed</span>
+                            <span [ngStyle]="{'color':'blue'}" *ngIf="element.status == 0">In-Progress</span>                            
+                            <span [ngStyle]="{'color':'green'}" *ngIf="element.status == 1">Completed</span>
+                            <span [ngStyle]="{'color':'red'}" *ngIf="element.status == 2">Failed</span>
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
                         <th mat-header-cell *matHeaderCellDef> Details </th>
                         <td mat-cell *matCellDef="let element">
-                            <span *ngFor="let  location of element.route; let idx = index">
-                                <button mat-raised-button class="bggreen">{{location.locationName}}</button>
+                            <span *ngFor="let  location of element.route; let idx = index"> 
+                                <button  *ngIf="location.status==0" mat-raised-button class="bggrey">{{location.locationName}}</button>                               
+                                <button (click)="openDialog()"  *ngIf="location.status==1" mat-raised-button class="bggreen">{{location.locationName}}</button>
+                                <button (click)="openDialog()" *ngIf="location.status==2" mat-raised-button class="bgred">{{location.locationName}}</button>
                                 <span *ngIf="element.route.length > idx+1">
                                     <b>==></b>
                                 </span>
