--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -8,6 +8,7 @@ text-align: center;
 
 .bggreen{background-color: green;color:white}
 .bgred{background-color: red;color:white}
+.bggrey{background-color: grey;color:white}
 .mat-card {
     text-align: center;
     img {
