--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -17,3 +17,7 @@ body {
 .mb-20 {
     margin-bottom: 20px;
 }
+
+.bggreen{background-color: green;color:white}
+.bgred{background-color: red;color:white}
+.bggrey{background-color: grey;color:white}
