--- a/src/app/layout/users/users.component.html
+++ b/src/app/layout/users/users.component.html
@@ -9,7 +9,7 @@
         </mat-card-header>
         <mat-card-content>
             <!-- <h1 class="app-name">Sb Admin Material</h1> -->
-            <form [formGroup]="userForm" class="login-form" fxFlex>
+            <form [formGroup]="userForm" (ngSubmit)="onSave()" class="login-form" fxFlex>
                 <div fxFlex fxlayout="row" fxlayout.lt-md="column">
                     <div fxFlexFill>
                         <mat-form-field class="w-100">
@@ -19,11 +19,7 @@
                                     <strong>required &nbsp;</strong>
                                 </span>
                             </mat-error>
-                            <mat-error>
-                                <span *ngIf="userForm.controls['firstName'].hasError('isEmailUnique')">Firstname is
-                                    <strong>already exists. &nbsp;</strong>
-                                </span>
-                            </mat-error>
+
                         </mat-form-field>
                     </div>
                 </div>
@@ -32,12 +28,12 @@
                         <mat-form-field class="w-100">
                             <input matInput placeholder="Lastname" formControlName="lastName">
                             <mat-error>
-                                    <span *ngIf="userForm.controls['lastName'].hasError('required')">Lastname is
-                                        <strong>required &nbsp;</strong>
-                                    </span>
-                                </mat-error>
+                                <span *ngIf="userForm.controls['lastName'].hasError('required')">Lastname is
+                                    <strong>required &nbsp;</strong>
+                                </span>
+                            </mat-error>
                         </mat-form-field>
-                        
+
                     </div>
                 </div>
 
@@ -46,10 +42,15 @@
                         <mat-form-field class="w-100">
                             <input matInput placeholder="Email" formControlName="email">
                             <mat-error>
-                                    <span *ngIf="userForm.controls['email'].hasError('required')">Email is
-                                        <strong>required &nbsp;</strong>
-                                    </span>
-                                </mat-error>
+                                <span *ngIf="userForm.controls['email'].hasError('isEmailUnique')">Email is
+                                    <strong>already exists. &nbsp;</strong>
+                                </span>
+                                <span *ngIf="userForm.controls['email'].hasError('required')">Email is
+                                    <strong>required &nbsp;</strong>
+                                </span>
+
+                            </mat-error>
+
                         </mat-form-field>
                     </div>
                 </div>
@@ -58,17 +59,17 @@
                         <mat-form-field class="w-100">
                             <input matInput type="password" placeholder="Password" formControlName="password">
                             <mat-error>
-                                    <span *ngIf="userForm.controls['password'].hasError('required')">Password is
-                                        <strong>required &nbsp;</strong>
-                                    </span>
-                                </mat-error>
+                                <span *ngIf="userForm.controls['password'].hasError('required')">Password is
+                                    <strong>required &nbsp;</strong>
+                                </span>
+                            </mat-error>
                         </mat-form-field>
                     </div>
                 </div>
 
                 <div fxFlex fxLayout="row" fxLayout.lt-md="column">
                     <div fxFlexFill>
-                        <button mat-raised-button color="primary" class="w-100 mr-10" (click)="saveUser()">Save</button>
+                        <button [disabled]="!userForm.valid" type="submit" mat-raised-button color="primary" class="w-100 mr-10">Save</button>
                         <button mat-raised-button color="primary" class="w-100" (click)="onActivateUserListing()">Cancel</button>
                     </div>
                 </div>
@@ -115,7 +116,7 @@
                         <th mat-header-cell *matHeaderCellDef>Status</th>
                         <td mat-cell *matCellDef="let element">
                             <span [ngStyle]="{'color':'green'}" *ngIf="element.status == 1">Active</span>
-                            <span [ngStyle]="{'color':'red'}" *ngIf="element.status == 0">InActive</span>
+                            <span [ngStyle]="{'color':'red'}" *ngIf="element.status == 0">Inactive</span>
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="action">
